--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
             <version>3.13.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
